Applying many of the IDE recommendations. Continuous pestering for the win??